<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Título da Tarefa -->
    <EditText
        android:id="@+id/et_task_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:importantForAutofill="no"
        android:inputType="text"
        android:hint="@string/task_title"
        android:padding="16dp"
        android:textSize="16sp"
        android:minHeight="48dp"
        android:minWidth="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Descrição da Tarefa -->
    <EditText
        android:id="@+id/et_task_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginTop="8dp"
        android:hint="@string/task_description"
        android:minHeight="80dp"
        android:padding="8dp"
        android:autofillHints="description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_task_title" />

    <!-- Data do Lembrete -->
    <TextView
        android:id="@+id/tv_reminder_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/reminder_date"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/et_task_description"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_pick_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_date"
        app:layout_constraintTop_toBottomOf="@id/tv_reminder_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp"
        tools:ignore="VisualLintButtonSize" />

    <!-- Hora do Lembrete -->
    <TextView
        android:id="@+id/tv_reminder_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/reminder_time"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/btn_pick_date"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_pick_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_time"
        app:layout_constraintTop_toBottomOf="@id/tv_reminder_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp"
        tools:ignore="VisualLintButtonSize" />

    <!-- Botão Salvar -->
    <Button
        android:id="@+id/btn_save_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_task"
        android:padding="16dp"
        android:minHeight="48dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_pick_time"
        app:layout_constraintHorizontal_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>

